email confirmation works

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,2 @@
 <h1>Blocitoff</h1>
-<div class="col-md-4">
-  <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
-</div>
+<p>A to-do list that self-destructs to help you get complete the most important tasks.</p>
