work on home page

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,2 +1,6 @@
 <h1>Blocitoff</h1>
-<p>A to-do list that self-destructs to help you get complete the most important tasks.</p>
+  <p>A self-destruction to-do list to keep you focused on the things that really matter.</p>
+  <p>
+      <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+  </p>
