progress on to-do items

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,6 +1,16 @@
-<h1>Blocitoff</h1>
-  <p>A self-destruction to-do list to keep you focused on the things that really matter.</p>
-  <p>
-      <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
-      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
-  </p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-8">
+      <div class="jumbotron">
+        <h1>Blocitoff</h1>
+          <p class="text-center">
+A self-destruction to-do list to keep you focused on the things that really matter.</p>
+          <p>
+            <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+            <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+          </p>
+      </p>
+      </div>
+    </div>
+  </div>
+</div>
