--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,11 @@
   margin-top: 9px;
 }
 
+.jumbotron {
+  margin-bottom: 15px;
+  margin-top: 15px;
+  font-size: 21px;
+  font-weight: 200;
+  background-color: #B7CCF2
+}
+
