--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,19 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+<head>
+<body>
 <div class="container">
   <div class="pull-right user-info">
     <% if current_user %>
-      Hello <%= current_user.email %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      Hello <%= current_user.email %>! 
+      <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm' do %>
+        <span class="glyphicon glyphicon-user"></span>
+      <% end %>
+      <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm' do %>
+        <span class="glyphicon glyphicon-log-out"></span>
+      <% end %>
+
     <% else %>
       <%= link_to "Sign In", new_user_session_path %> or 
       <%= link_to "Sign Up", new_user_registration_path %>
@@ -17,10 +26,7 @@
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
-</div>
-</head>
-<body>
-  
+</div>  
 
 <%= yield %>
 
