--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,11 +1,2 @@
-<div class="col-md-8">
-     <%= form_for @item do |f| %>
-       <div class="form-group">
-         <%= f.label :description %>
-         <%= f.text_field :description, class: 'form-control', placeholder: "Add Item" %>
-       </div>
-       <div class="form-group">
-         <%= f.submit "Add", class: 'btn btn-success' %>
-       </div>
-     <% end %>
-</div> 
+    <p><%= item.name %></p>
+
