work on todo items

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -4,4 +4,7 @@
     <%= f.text_area :name, rows: 2, class: 'form-control'  %>
     <%= f.submit 'Add Item', class: 'btn btn-success btn-sm' %>
   </div>
+  <strong>Items</strong>
+  <div class="form-group">
+    <%= f.text_area :item %>
 <% end %>
