--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Blocitoff</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-<div class="container">
-  <div class="pull-right user-info">
-    <% if current_user %>
-      Hello <%= current_user.email %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "Sign In", new_user_session_path %> or 
-      <%= link_to "Sign Up", new_user_registration_path %>
-    <% end %>
+  <head>
+    <title>Blocitoff</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+<body>
+<header>
+  <div class="container">
+    <div class="pull-right user-info">
+      <% if current_user %>
+        Hello <%= current_user.email %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Sign In", new_user_session_path %> or 
+        <%= link_to "Sign Up", new_user_registration_path %>
+      <% end %>
+    </div>
   </div>
+</header>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 </div>
-</head>
-<body>
 
     <% if flash[:notice] %>
       <div class="alert alert-success">
