progress on mark-complete

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,3 +4,4 @@
 
 <%= render partial: 'items/item', collection: @items %>
 
+  <div class='js-items-count'><%= pluralize(@user.items.count, 'item') %></div>
