--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,1 +1,3 @@
 <%= item.name %>
+
+<%= link_to "Delete", [item.user(current_user), item], method: :delete, class: 'glyphicon glyphicon-ok', remote: true %>
