--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
-<%= render 'items/form' %>
-
+<% if @user.present? %> 
+<%= pluralize(@user.items.count, 'item') %>
+<% end %>
 
 
 <%= render partial: 'items/item', collection: @items %>
 
+<%= render 'items/form' %>
+<!-- should i render the form here? -->
