playing with design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,15 +22,22 @@
 
 .jumbotron {
   margin-top: 45px;
-  margin-left: 125px;
-  margin-right: 125px;
+  height: 50%;
+  width: 50%;
   font-size: 21px;
   font-weight: 200;
-  background-color: #B7CCF2;
+  background-color: #f1e8ca;
   text-align: center;
   max-width: 500px;
+  align: center;
 }
 
-#home {
-  align-content: center;
+
+body {
+  font-family: 'Bree Serif', serif;
+  background-color: #dd855c;
+}
+
+header {
+  background-color: #9ebd9e;
 }
