--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,16 +1,21 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-md-8">
-      <div id="home" class="jumbotron">
-        <h1>Blocitoff</h1>
-        <p>
-A self-destruction to-do list to keep you focused on the things that really matter.</p>
-          <p>
-            <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
-            <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
-          </p>
-      </p>
+<html>
+<body>
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-8">
+        <div class="jumbotron">
+          <h1>Blocitoff</h1>
+          <p>A self-destruction to-do list to keep you focused on the things that really matter.</p>
+            <p>
+              <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+              <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+            </p>
+        </p>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+  </div>  
+
+</body>
+</html>
