playing with tables

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,8 +22,6 @@
 
 .jumbotron {
   margin-top: 45px;
-  height: 50%;
-  width: 50%;
   font-size: 21px;
   font-weight: 200;
   background-color: #f1e8ca;
@@ -40,4 +38,9 @@ body {
 
 header {
   background-color: #9ebd9e;
+}
+
+table { 
+  background-color: #f1e8ca;
+  color: #745151;
 }
