--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,11 @@
-<%= render 'items/form' %>
+<html>
+<body>
+  
+ <%= render 'items/form' %>
 
 
 
 <%= render partial: 'items/item', collection: @items %>
-
+ 
+</body>
+</html>
