--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,1 +1,19 @@
-<%= item.name %>
+<html>
+<body>
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div class="table-responsive">
+          <table class="table table-bordered">
+              <ol 
+                <li><%= item.name %></li>
+              </ol>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>  
+
+</body>
+</html>
