--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -3,7 +3,7 @@
   
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-8">
+      <div class="col-md-6 col-md-offset-3">
         <div class="jumbotron">
           <h1>Blocitoff</h1>
           <p>A self-destruction to-do list to keep you focused on the things that really matter.</p>
