--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,9 +1,3 @@
-
-
-<%= link_to "Delete", [item.user(current_user), item], method: :delete, class: 'glyphicon glyphicon-ok', remote: true %>
-<html>
-<body>
-  
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -12,12 +6,11 @@
               <ol 
                 <li><%= item.name %></li>
               </ol>
-              <%= link_to "Delete", [item.user(current_user), item], method: :delete, class: 'glyphicon glyphicon-ok', remote: true %>
+            
+             
+            <%= link_to "Delete", item, method: :delete %>
           </table>
         </div>
       </div>
     </div>
   </div>  
-
-</body>
-</html>
