progress on mark complete

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -8,7 +8,7 @@
               </ol>
             
              
-            <%= link_to "Delete", item, method: :delete %>
+            <%= link_to "Delete", item.name, method: :delete, class: 'glyphicon glyphicon-ok', remote: true %>
           </table>
         </div>
       </div>
