--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@user, @user.items.build], remote: true do |f| %>
+<%= form_for [@user, @user.items.new] do |f| %>
   <div class="col-md-6 col-md-offset-3">
 
     <div class="form-group">
