--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -4,8 +4,11 @@
       <div class="table-responsive">
         <table class="table table-bordered">
           <ol> 
-            <li><%= item.name %></li>
-            <%= link_to "", user_item_path(@user.id, item.id), method: :delete,  class: 'glyphicon glyphicon-ok' %>
+            <li><%= item.name %> Expires in <%= distance_of_time_in_words_to_now(item.expires_at) %></li>
+            <%= link_to "", user_item_path(current_user, item), method: :delete,  class: 'glyphicon glyphicon-trash' %>
+            <%= link_to user_item_complete_path(current_user, item), method: :put do %>
+            <button type"button" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-check"></span>
+             <% end %>
           </ol>
         </table>
       </div>
