--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   
 <% if @user.present? %> 
 <% end %>
-  <div class='js-items-count'><%= pluralize(@user.items.count, 'item') %></div>
+  <div class='js-items-count'><%= pluralize(@user.num_of_todos, 'item') %></div>
     <h2>Things I need to do</h2>
   <div class='js-items'>
     <%= render partial: 'items/item', collection: @items %>
