--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,13 +34,34 @@
 body {
   font-family: 'Bree Serif', serif;
   background-color: #dd855c;
+  text-align: center;
+}
+
+.js-items-count {
+  font-size: 2.25em;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 header {
   background-color: #9ebd9e;
+  padding-bottom: 9px;
 }
 
 table { 
   background-color: #f1e8ca;
   color: #745151;
+}
+
+tr th {
+  text-align: center;
+  font-size: 1.5em;
+}
+
+a {
+  margin-right: 30px;
+}
+
+button {
+  margin-left: 30px;
 }
