--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,9 +1,4 @@
-<%= form_for [@user, @user.items.new] do |f| %>
-  <div class="col-md-6 col-md-offset-3">
-
-    <div class="form-group">
-      <%= f.text_area :name, rows: 1, class: 'form-control', placeholder: 'Add an item'  %>
-      <%= f.submit 'Do it!', class: 'btn btn-success btn-sm' %>
-    </div>
-  </div>
+<%= form_for [@user, @user.items.new] do |f| %> 
+  <input type="name" class="form-control" id="input-item" placeholder="Add an item">
+  <button type="submit" class="btn btn-success btn-sm">Just do it!</button>
 <% end %>
