--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,17 +1,7 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div class="table-responsive">
-        <table class="table table-bordered">
-          <ol> 
-            <li><%= item.name %> Expires in <%= distance_of_time_in_words_to_now(item.expires_at) %></li>
-            <%= link_to "", user_item_path(current_user, item), method: :delete,  class: 'glyphicon glyphicon-trash' %>
-            <%= link_to user_item_complete_path(current_user, item), method: :put do %>
-            <button type"button" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-check"></span>
-             <% end %>
-          </ol>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>  
+<tr>
+  <%= link_to user_item_complete_path(current_user, item), method: :put do %>
+  <td><%= item.name %></td> 
+  <td><%= distance_of_time_in_words_to_now(item.expires_at) %></td>
+  <td id="buttons"><%= link_to "", user_item_path(current_user, item), method: :delete,  class: 'glyphicon glyphicon-trash' %><button type"button" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-check"></span></td>
+  <% end %>
+</tr>      
