--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,31 @@
-
-
-  
 <% if @user.present? %> 
+  <div class='js-items-count'> You have <%= pluralize(@user.num_of_todos, 'item') %> to complete </div>
+    <div class="col-md-6 col-md-offset-3">
+      <div class="table-responsive">
+        <table class="table table-bordered">
+          <div class='js-items'>
+            <thead>
+              <tr>
+                <th>Item</th>
+                <th>Days Left</th>
+                <th>Complete?</th>
+              </tr>
+            </thead>
+              <tbody>            
+                <%= render partial: 'items/item', collection: @items %>          
+              </tbody>
+            </div>
+          </table>
+        </div>
+      </div>
+    </div>
+  <div class="col-md-6 col-md-offset-3">
+    <form class="form-inline">
+      <div class="form-group">
+        <div class="new-item">
+          <%= render 'items/form' %>
+        </div>
+      </div>
+    </form>
+  </div>
 <% end %>
-  <div class='js-items-count'><%= pluralize(@user.num_of_todos, 'item') %></div>
-    <h2>Things I need to do</h2>
-  <div class='js-items'>
-    <%= render partial: 'items/item', collection: @items %>
-  </div>
-  <div class="new-item">
-    <%= render 'items/form' %>
-  </div>
