--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
       </div>
     </div>
   <div class="col-md-6 col-md-offset-3">
-    <form class="form-inline">
+    <form class="pull-left form-inline">
       <div class="form-group">
         <div class="new-item">
           <%= render 'items/form' %>
