--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,10 @@
   background-color: #f1e8ca;
   text-align: center;
   max-width: 500px;
-  align: center;
+}
+
+p a {
+  margin: .15%;
 }
 
 
@@ -64,4 +67,8 @@ a {
 
 button {
   margin-left: 30px;
+}
+
+header div a {
+  margin: .05%;
 }
