--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,7 @@
               <tr>
                 <th>Item</th>
                 <th>Days Left</th>
+                <th>Delete</th>
                 <th>Complete?</th>
               </tr>
             </thead>
