--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for [@user, @user.items.new] do |f| %>
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-4 col-md-offset-3">
 
     <div class="form-group">
-      <%= f.text_area :name, rows: 2, class: 'form-control', placeholder: 'Add an item'  %>
+      <%= f.text_area :name, class: 'form-control', placeholder: 'Add an item' %>
       <%= f.submit 'Do it!', class: 'btn btn-success btn-sm' %>
     </div>
   </div>
