--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,9 +19,20 @@
 .user-info {
   margin-top: 9px;
 }
-
+header {
+  background-color: #9ebd9e;
+  padding-bottom: 9px;
+}
+header div a {
+  margin: .05%;
+}
+body {
+  font-family: 'Bree Serif', serif;
+  background-color: #dd855c;
+  text-align: center;
+}
 .jumbotron {
-  margin-top: 45px;
+  margin: 45px auto 0 auto;
   font-size: 21px;
   font-weight: 200;
   background-color: #f1e8ca;
@@ -33,23 +44,13 @@ p a {
   margin: .15%;
 }
 
-
-body {
-  font-family: 'Bree Serif', serif;
-  background-color: #dd855c;
-  text-align: center;
-}
-
 .js-items-count {
   font-size: 2.25em;
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
-header {
-  background-color: #9ebd9e;
-  padding-bottom: 9px;
-}
+
 
 table { 
   background-color: #f1e8ca;
@@ -69,6 +70,3 @@ button {
   margin-left: 30px;
 }
 
-header div a {
-  margin: .05%;
-}
