--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,19 @@
 <div class='js-items-count'> You have <%= pluralize(@user.num_of_todos, 'item') %> to complete </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <div class='js-items'>
-          <ol>
-          <%= render partial: 'items/item', collection: @items %>
-          </ol>
-        </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class='js-items'>
+        <ol>
+        <%= render partial: 'items/item', collection: @items %>
+        </ol>
       </div>
-    </div>  
-  </div>
+    </div>
+  </div>  
+</div>
 <div class="new-item">
-  <%= render 'items/form' %>
+  <div class="col-md-4 col-md-offset-3">
+    <div class="form-group">
+      <%= render 'items/form' %>
+    </div>
+  </div>
 </div>
