--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -16,8 +16,9 @@
       </div>
     </div>
   </div>  
-
-  <img src="../images/checklist2.jpg" >
+  <div class="image">
+    <%= asset_path('checklist2.jpg') %>
+  </div>
 
 </body>
 </html>
