--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,6 +1,8 @@
-<td><%= item.name %></td> 
-<td><%= distance_of_time_in_words_to_now(item.expires_at) %></td>
-<td id="buttons"><%= link_to "", user_item_path(current_user, item), method: :delete,  class: 'glyphicon glyphicon-trash' %></td> 
-<td><%= link_to user_item_complete_path(current_user, item), method: :put do %><button type"button" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-check"></span></td>
-<% end %>
+<tr id="buttons">
+  <td><%= item.name %></td> 
+  <td><%= distance_of_time_in_words_to_now(item.expires_at) %></td>
+  <td><%= link_to "", user_item_path(current_user, item), method: :delete,  class: 'glyphicon glyphicon-trash' %></td> 
+  <td><%= link_to user_item_complete_path(current_user, item), method: :put do %><button type"button" class="btn btn-success btn-xs"><span class="glyphicon glyphicon-check"></span></td>
+  <% end %>
+</tr>
  
