--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,15 @@
     <div class="container">
       <div class="pull-right user-info">
         <% if current_user %>
-          Hello <%= current_user.email  %>! 
-          <%= link_to "Edit", edit_user_registration_path %> ||  
+          Hello <%= link_to (current_user.name || current_user.email), user_path(current_user)  %>! 
+          <br>
+          <%= link_to "Home", root_path %> ||  
           <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to "Sign In", new_user_session_path %> || 
           <%= link_to "Sign Up", new_user_registration_path %>
         <% end %>
+      </br>
       </div>
     </div>
   </header>
