--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,20 @@
-<div class='js-items-count'> You have <%= pluralize(@user.num_of_todos, 'item') %> to complete </div>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div class='js-items'>
-        <div class="table-responsive">
-          <table class="table table-bordered">
-            <thead>
-              <tr>
-                <th>Item</th>
-                <th>Days Left</th>
-                <th>Delete</th>
-                <th>Complete?</th>
-              </tr>
-            </thead>
+    <div id="list" class="col-md-8 col-md-offset-2">
+      <div class="well">
+        <div class='js-items-count'> You have <%= pluralize(@user.num_of_todos, 'item') %> to complete 
+        </div>
+        <div class='js-items'>
+          <div class="table-responsive">
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>Item</th>
+                  <th>Days Left</th>
+                  <th>Delete</th>
+                  <th>Complete?</th>
+                </tr>
+              </thead>
               <tbody>   
                 <tr>         
                   <%= render partial: 'items/item', collection: @items %> 
@@ -21,13 +23,14 @@
             </table>
           </div>
         </div>
+        <div class="new-item">
+          <div class="form-inline">
+            <div class="form-group">
+              <%= render 'items/form' %>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>  
-<div class="new-item">
-  <div class="col-md-6 col-md-offset-3">
-    <div class="form-group">
-      <%= render 'items/form' %>
     </div>
   </div>
 </div>
