--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,19 @@ header div a {
   margin: .05%;
 }
 
+div#id {
+
+}
+
+div.well {
+  margin: 70px;
+  border: 10px;
+  border-style: solid;
+  border-color: #9ebd9e;
+  border-radius: 15%;
+}
+
+
 .jumbotron {
   font-size: 21px;
   font-weight: 200;
@@ -53,7 +66,7 @@ p a {
 
 
 .js-items-count {
-  font-size: 2.25em;
+  font-size: 2em;
   padding-top: 20px;
   padding-bottom: 20px;
 }
