--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,5 @@
 
 <%= form_for [@user, @user.items.new] do |f| %>
-  <%= f.text_area :name, class: 'form-control', placeholder: 'Add an item' %>
+  <%= f.text_field :name, class: 'form-control', placeholder: 'Add an item' %>
   <%= f.submit 'Do it!', class: 'btn btn-success btn-sm' %>
 <% end %>
