--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 
 .user-info {
   margin-top: 9px;
+  font-size: 1.25em;
 }
 
 header {
@@ -43,11 +44,12 @@ div#id {
 }
 
 div.well {
-  margin: 70px;
+  margin: 80px;
   border: 10px;
   border-style: solid;
-  border-color: #9ebd9e;
+  border-color: rgb(213,64,37);
   border-radius: 15%;
+  background-color: #9ebd9e;
 }
 
 
@@ -72,10 +74,13 @@ p a {
 }
 
 
-
 table { 
   background-color: #f1e8ca;
   color: #745151;
+}
+
+table.table.table-bordered {
+  border: 5px;
 }
 
 tr th {
