--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,25 +1,25 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <h3>Change email or password</h3>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :patch}) do |f| %>
-      <%= devise_error_messages! %>
-      <div class="form-group">
-        <%= f.email_field :email, class:  'form-control', placeholder: "Enter email" %>
-      </div>
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <div class="well">
+      <h2>Edit <%= resource_name.to_s.humanize %></h2>
+      <h3>Change email or password</h3>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :patch}) do |f| %>
+        <%= devise_error_messages! %>
         <div class="form-group">
-          <p>Waiting confirmation for:</p>
-          <%= resource.unconfirmed_email %>
+          <%= f.email_field :email, class:  'form-control', placeholder: "Enter email" %>
         </div>
-      <% end %>
-      <div class="form-group">
-        <%= f.password_field :password, class: 'form-control', placeholder: "Enter password" %>
-        <i>(leave blank if you don't want to change it)<i>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div class="form-group">
+            <p>Waiting confirmation for:</p>
+            <%= resource.unconfirmed_email %>
+          </div>
+        <% end %>
+        <div class="form-group">
+          <%= f.password_field :password, class: 'form-control', placeholder: "Enter new password" %>
+          <i>(leave blank if you don't want to change it)<i>
         </div>
         <div class="form-group">
-          <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
+          <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter new password confirmation" %>
         </div>
         <div class="form-group">
           <%= f.password_field :current_password, class: 'form-control', placeholder: "Enter current password" %>
@@ -28,21 +28,23 @@
         <div  class="form-group">
           <%= f.submit "Update", class: 'btn btn-success' %>
         </div>
-      <% end %>
+        <% end %>
 
-      <h3>Edit personal information</h3>
-      <%= form_for(current_user) do |f| %>
-        <div class="form-group">
-          <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
-        </div>
-        <div class="form-group">
-          <%= f.submit "Update", class: 'btn btn-success' %>
-        </div>
-      <% end %>
+        <h3>Edit personal information</h3>
+        <%= form_for(current_user) do |f| %>
+          <div class="form-group">
+            <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
+          </div>
+          <div class="form-group">
+            <%= f.submit "Update", class: 'btn btn-success' %>
+          </div>
+        <% end %>
 
-      <h3>Cancel my account</3>
-      <div class="form-group">
+        <h3>Cancel my account</h3>
+        <div class="form-group">
           <p><%= button_to "Cancel my account", registration_path(resource_name), data: {confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
+        </div>
       </div>
     </div>
   </div>
+</div>
