--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,28 @@
-<h2>Sign Up</h2>
-
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
-      <div class="form-group">
-        <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: "Enter name" %>
-      </div>
-      <div class="form-group">
-        <%= f.email_field :email, class: 'form-control', placeholder: "Enter email" %>
-      </div>
-      <div class="form-group" %>
-        <%= f.password_field :password, class: 'form-control', placeholder: "Enter password" %>
-      </div>
-      <div class="form-group">
-        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Sign Up", class: 'btn btn-success' %>
-      </div>
-      <div class="form-group">
-        <%= render "devise/shared/links" %>
-      </div>
-    <% end %>
+    <div class="well">
+    <h2>Sign Up</h2>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
+        <div class="form-group">
+          <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: "Enter name" %>
+        </div>
+        <div class="form-group">
+          <%= f.email_field :email, class: 'form-control', placeholder: "Enter email" %>
+        </div>
+        <div class="form-group" %>
+          <%= f.password_field :password, class: 'form-control', placeholder: "Enter password" %>
+        </div>
+        <div class="form-group">
+          <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Sign Up", class: 'btn btn-success' %>
+        </div>
+        <div class="form-group">
+          <%= render "devise/shared/links" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
