update edit registration

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,6 +33,7 @@
         <h3>Edit personal information</h3>
         <%= form_for(current_user) do |f| %>
           <div class="form-group">
+            <%= f.label :" " %>
             <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
           </div>
           <div class="form-group">
