--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,6 +6,7 @@
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :patch}) do |f| %>
         <%= devise_error_messages! %>
         <div class="form-group">
+          <%= f.label :" " %>
           <%= f.email_field :email, class:  'form-control', placeholder: "Enter email" %>
         </div>
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -33,7 +34,7 @@
         <h3>Edit personal information</h3>
         <%= form_for(current_user) do |f| %>
           <div class="form-group">
-            <%= f.label :" " %>
+            <%= f.label :name %>
             <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
           </div>
           <div class="form-group">
