work on look of buttons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -110,7 +110,7 @@ span.glyphicon.glyphicon-check {
   background-color: #f1e8ca;
 }
 
-input.btn.btn-success, input.btn.btn-danger {
+input.btn.btn-success, input.btn.btn-danger, a.btn.btn-success {
   border: 1px solid rgb(213,64,37);
   background-color: transparent;
   color: #745151;
