--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>Blocitoff</h1>
       <p>A self-destructing to-do list to keep you focused on the things that really matter.</p>
-      <p><%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
-          <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!</p>
+      <p><%= link_to "Sign In", new_user_session_path, class: 'btn btn-success' %> or
+          <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-success sign-up' %> today!</p>
   </div>
 </div>
